--- a/client/dashboard/less/Dashboard.less
+++ b/client/dashboard/less/Dashboard.less
@@ -82,6 +82,9 @@
       font-weight: bold;
       text-align: center;
       width: 100%;
+      position: absolute;
+      left: 0;
+      margin-top: 50px;
     }
     .mixboard-interface-row {
       margin: 10px 0;
